Prevent content and comments to render min-height, fix issues with excessive spacing applied. Fix controls disappear issue when toggling post parts.

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -2476,7 +2476,9 @@ div.uinsert-selector a:hover {
   opacity: 1 !important; }
 
 .upfront-region-container-has-posts .upfront-region,
-.upfront-region-container-has-this_post .upfront-region {
+.upfront-region-container-has-this_post .upfront-region,
+.upfront-region-container-has-content .upfront-region,
+.upfront-region-container-has-comments .upfront-region {
   min-height: 0 !important; }
 
 .upfront-region-current {
